fix some issues in app.component & add horizontal scroll for cards

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .custom-scrollbar::-webkit-scrollbar {
+    height: 8px; 
+  }
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #c2ccd8;
+    border-radius: 10px;
+  }
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+}
